--- a/themes/academimal/layouts/index.html
+++ b/themes/academimal/layouts/index.html
@@ -33,7 +33,7 @@
 
 {{ with .Site.Data.publications }}
 <hr>
-<h2 id="publications">Publications</h2>
+<h2 id="publications">Job Market Paper</h2>
 {{ range . }}
 {{ range .works }}
 {{ partial "publication.html" (dict "context" . "pid" ($scratch.Get "pubcnt")) }}
