--- a/themes/academimal/layouts/index.html
+++ b/themes/academimal/layouts/index.html
@@ -22,7 +22,7 @@
 
 {{ with .Site.Data.publications }}
 <hr>
-<h2 id="publications">Publications</h2>
+<h2 id="publications">Job Market Paper</h2>
 {{ range . }}
 {{ range .works }}
 {{ partial "publication.html" (dict "context" . "pid" ($scratch.Get "pubcnt")) }}
@@ -54,9 +54,9 @@
 {{ end }}
 {{ end }}
 
-{{ with .GetPage "/sections/from-another-life.md" }}
+{{ with .GetPage "/sections/teaching.md" }}
 <hr>
-<h2 id="fromanotherlife">From Another Life</h2>
+<h2 id="teaching">Teaching</h2>
 {{ .Content }}
 {{ end }}
 
