--- a/themes/academimal/layouts/partials/header.html
+++ b/themes/academimal/layouts/partials/header.html
@@ -15,7 +15,10 @@
 
                 <!-- begin short bio -->
                 <p>{{ .Site.Params.shortbio }}</p>
+                <p>{{ .Site.Params.shortbio1 }}</p>
                 <!-- end short bio -->
+
+                
 
                 {{/*
                 <p class="contactinfo">
