--- a/themes/academimal/layouts/partials/header.html
+++ b/themes/academimal/layouts/partials/header.html
@@ -14,11 +14,9 @@
                 <h1>{{ .Site.Title }}</h1>
 
                 <!-- begin short bio -->
-                <p>{{ .Site.Params.shortbio }}</p>
-                <p>{{ .Site.Params.shortbio1 }}</p>
+                <p style="margin:0">{{ .Site.Params.shortbio }}</p>
+                <p style="margin:0">{{ .Site.Params.shortbio1 }}</p>
                 <!-- end short bio -->
-
-                
 
                 {{/*
                 <p class="contactinfo">
