--- a/themes/academimal/layouts/index.html
+++ b/themes/academimal/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" -}}
-<h2 id="bio">Bio</h2>
+<h2 id="bio">About</h2>
 {{ with .GetPage "/sections/aboutme.md" }}
 {{ .Content }}
 {{ end }}
