--- a/themes/academimal/layouts/partials/header.html
+++ b/themes/academimal/layouts/partials/header.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ .Site.Title }} | {{ .Title }}</title>
         <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}">
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="content/favicon.ico">
     </head>
     <body>
         <div class="wrapper">
